# Personal-AI-Employee-Hackathon-0

./: .gitignore  README.md  base_watcher.py  main.py  pyproject.toml  requirements.txt
